--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,19 @@
     transform: translate(0px, 0px) scale(1);
   }
 }
+
+/* Skeleton Loader Animation */
+.skeleton-loader {
+  background: linear-gradient(90deg, #e5e7eb 25%, #f3f4f6 50%, #e5e7eb 75%);
+  background-size: 200% 100%;
+  animation: loading 1.5s infinite;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
